# services-sentry

./: .gitlab-ci.yml  README.rst  entry-points.txt  pyproject.toml  setup.cfg
nagare/services/: sentry.py
src/nagare/: __init__.py
src/nagare/services/: sentry.py
