[metadata]
name = nagare-services-sentry
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Sentry service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-sentry
    Tracker = https://github.com/nagareproject/services-sentry/issues

[options]
zip_safe = False
packages = find:
install_requires =
    sentry-sdk
    nagare-services
    nagare-server

[options.entry_points]
nagare.services =
    sentry = nagare.services.sentry:Sentry

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
    .git,
    .eggs,
    doc
